MediaRecorder: Tune complexity settings for VP9 encoding (second go)

This code was landed but -silly me- I was setting the complexity
_before_ creating the encoder :P

Also, the values the VP8E_SET_CPUUSED parameter are:
 - up to 8 for VP9 (and not up to 16, that's for VP8)
 - Real Time values are 5 - 8 [1]

BUG=591342, 589162

[1] https://code.google.com/p/chromium/codesearch#chromium/src/third_party/webrtc/modules/video_coding/codecs/vp9/vp9_impl.cc&sq=package:chromium&type=cs&l=35&rcl=1458143321

Review URL: https://codereview.chromium.org/1809853002

Cr-Commit-Position: refs/heads/master@{#381572}

Former-commit-id: 4e1da39cc90c4a335bb1fa777c7ab25f50d8f22f